# smart_aricon

./: LICENSE
src/: .env.example  .gitignore  camera.py  led_test.py  main.py  pyproject.toml
src/airconditioner/: list_devices.py  switchbot.py
src/recognition/: detect.py  embed.py  face_store.py  recognize.py  register.py
src/script/: led_test.py
typings/gpiozero/: __init__.pyi
