[project]
name = "smart-aircon"
version = "0.1.0"
description = "顔認証によるスマートエアコン制御 (演習7) — Raspberry Pi 5"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "numpy>=1.26",
    "requests>=2.31",
    "opencv-python-headless>=4.10",
    "loguru>=0.7.3",
    "onnxruntime>=1.27.0",
]

[project.optional-dependencies]
pi = [
    "gpiozero>=2.0 ; sys_platform == 'linux'",
    "lgpio>=0.2 ; sys_platform == 'linux'",
    "adafruit-circuitpython-dht>=4.0 ; sys_platform == 'linux'",
    "adafruit-blinka>=8.0 ; sys_platform == 'linux'",
]
